[fix] utility bar alignment

--- a/source/sass/modules/organisms/_header.sass
+++ b/source/sass/modules/organisms/_header.sass
@@ -49,7 +49,8 @@
 .utility
   display: flex
   flex-shrink: 0
-  padding-top: 8px
+  +mq($bp-lg)
+    padding-top: 9px
 
 .utility_search
   flex-shrink: 0
